css: Add overflow-x to main content, to prevent dropdown from causing temporary scrollbar (new issue)

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -62,6 +62,7 @@ h5 {
   padding-left: 30px;
   padding-right: 30px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .result_box {
